# thai-song-player

./: .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_LICENSES.md  app.py  config.example.json  matcher.py  player.py  pyproject.toml  recognizer.py  recorder.py  songs.example.json
.github/workflows/: ci.yml
tests/: test_config.py  test_matcher.py  test_sanitizer.py
